--- a/deploy.yml
+++ b/deploy.yml
@@ -3,9 +3,13 @@
   hosts: prod
   become: true
   pre_tasks:
-    - name: Install EPEL repo
-      package: name=epel-release state=present
+    - name: Install some package 
+      package: name='{{ item }}' state=present
       when: ansible_distribution == "CentOS"
+      loop:
+        - epel-release
+        - wget
+        - git
 
     - name: download pip script
       get_url:
@@ -14,15 +18,19 @@
 
     - name: install python-pip
       command: python2.7 /tmp/get-pip.py
-      changed_when: false
 
     - name: Install docker python
       pip: name=docker-py
-
   tasks:
+    - name: Copy website file template
+      template:
+        src: index.html.j2
+        dest: /home/admin/index.html
     - name: Create Apache container
       docker_container:
         name: webapp
         image: httpd
         ports:
           - "80:80"
+        volumes:
+          - /home/admin/index.html:/usr/local/apache2/htdocs/index.html
